Version 0.19
    * bowtie2 instead of ssaha2 now used for mapping reads.
    * Various improvements to junction prediction.
    * Added option to run pipeline on SAM file of aligned reads (--aligned-sam) 
      instead of unaligned FASTQ to enable users to map reads with their favorite 
      program. In this mode only missing coverage and read alignment evidence are 
      compiled and used to predict mutations. (There is no new junction evidence).
    * Read alignment evidence now uses mapping scores in its probability model, greatly
      reducing some kinds of false positives.
    * Mixed positions with predicted frequencies ≥10% are output by default as
      marginal evidence even when running in normal (consensus_ mode using a 
      conservative version of --polymorphism-prediction in order to display variants 
      in genes which have duplicated or other errors caused by unknown divergence from 
      the reference sequence.

2012-06-12 Version 0.18
   * Fixed misnumbering and mistranslation of amino acid changes in genes on the 
     reverse genomic strand: a huge bug introduced in breseq-0.17e. (Thanks to Tim 
     Cooper for reporting this problem.)
   * Improved use of different genetic codes and translation of split protein reading 
     frames. All NCBI translation table codes should be recognized correctly now in 
     GenBank input files. Alternative initiation codons should be correctly interpreted. 
     Internal frameshifts in genes should be correctly translated.
   * Fixed crash using output step when no junctions were predicted. (Thanks Charles 
     Traverse for reporting.)

2012-05-19 Version 0.17e
    * Updated documentation to change genomediff to gdtools.
    * Standardized some arguments to gdtools (still experimental).
    * Reference sequences now show strands in HTML alignments.

2012-05-03 Version 0.17d
    * Added back access to polymorphism-* options at command line. (Use breseq -h to 